Второй этап: стилизация

--- a/index.html
+++ b/index.html
@@ -1,132 +1,153 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="дизайн-студия, интерьер, аксессуары, мебель, 3D-визуализация"/>
     <meta name="description" content="Дизайн-студия по созданию интерьера в доме"/>
-    <title>Главная страница</title>
+    <title>Студия дизайна SCANDI</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <h1 class="visually-hidden">Студия дизайна интерьеров Scandi</h1>
     <header class="page-header">
-      <a href="" class="page-header__logo">Scandi</a>
-      <nav class="main-menu">
-        <ul>
-          <li><a href="#about-us-anchor">О компании</a></li>
-          <li><a href="#portfolio-anchor">Порфолио</a></li>
-          <li><a href="#team-anchor"">Команда</a></li>
-          <li><a href="#work-anchor">Как мы работаем</a></li>
-          <li><a href="#feedback-anchor">Отзывы клиентов</a></li>
-          <li><a href="#request__info">Оставить заявку</a></li>
-          <li><a href="tel:+79818574624">+7 (981) 857-46-24</a></li>
-        </ul>
-      </nav>
-      <div class="page-header__container">
-        <h1>Поможем сделать вашу квартиру уютнее</h1>
-        <p>Подбираем текстиль, мебель и аксессуары под ваш интерьер, находим магазины и помогаем организовать доставку </p>
-        <a href="#request__info" class="btn-request btn-header">Оставить заявку</a>
+      <div class="container-nav">
+        <div class="nav-wrapper">
+          <a href="#" class="page-header__logo">Scandi</a>
+          <nav class="main-menu">
+            <ul>
+              <li><a href="#about-us-anchor">О компании</a></li>
+              <li><a href="#portfolio-anchor">Порфолио</a></li>
+              <li><a href="#team-anchor">Команда</a></li>
+              <li><a href="#work-anchor">Как мы работаем</a></li>
+              <li><a href="#feedback-anchor">Отзывы клиентов</a></li>
+              <li><a href="#request__info">Оставить заявку</a></li>
+            </ul>
+            <a href="tel:+79818574624">+7 (981) 857-46-24</a>
+          </nav>
+        </div>
+        <div class="page-header__container info">
+          <h2>Поможем сделать вашу квартиру уютнее</h2>
+          <p>Подбираем текстиль, мебель и аксессуары<br>под ваш интерьер, находим магазины<br>и помогаем организовать доставку </p>
+          <a href="#request__info" class="btn-request btn-header">Оставить заявку</a>
+        </div>
       </div>
     </header>
-    <section class="about-us" id="about-us-anchor">
-      <h2>О нас</h2>
-      <img src="image/table.jpg" class="table" alt="Красиво оформленный стол">
-      <div class="about-us__description">
-        <p>Премиальный европейский текстиль — одно из самых главных направлений работы коллектива. Создавать неповторимые интерьеры для наших дорогих клиентов, уделяя внимание мельчайшим деталям — вот то,  что по-настоящему вдохновляет дизайнеров нашей студии.</p>
-        <p>Наш коллектив сделает все, чтобы после сотрудничества с нами,  Вам было приятно сказать:<q>Да! Это именно то, что действительно достойно моего дома!</q></p>
-      </div>
-    </section>
-    <section class="key-features">
-      <ul>
-        <li>5<br>Лет опыта</li>
-        <li>100<br>проектов</li>
-        <li>10<br>наград</li>
-      </ul>
-    </section>
-    <section class="work" id="portfolio-anchor">
-      <h2>Наши работы</h2>
-      <figure class="work__room">
-        <img src="image/room.jpg" alt="Квартира-студия">
-        <figcaption>
-          <h3>Квартира-студия</h3>
-          <p>В квартире были светлые стены и тёплые цвета. Мы сконцентрировались на отсылках к природе и сделали ребятам уютный интерьер, отсылающий к виллам островов Бали.</p>
-        </figcaption>
-      </figure>
-      <figure><img src="image/kitchen.jpg" alt="Кухня"></figure>
-      <figure><img src="image/room_2.jpg" alt="Комната"></figure>
-      <figure><img src="image/bath.jpg" alt="Ванна"></figure>
-      <a href="#">Смотреть еще</a>
-    </section>
-    <div class="wrapper-team-work" id="team-anchor">
-      <section class="team">
-        <h2>Команда</h2>
-        <figure class="masha">
-          <img src="image/Masha.jpg" alt="Дизайнер Маша">
-          <figcaption>Это Маша, наш главный дизайнер. Она отвечает за дизайн-проект, приезжает к вам домой, общаетсяи помогает сделать вашу квартиру красивой и уютной.</figcaption>
-        </figure>
-        <figure class="sasha">
-          <img src="image/Sasha.jpg" alt="Менеджер Саша">
-          <figcaption>С нашим менеджером Сашей вы познакомитесь в первую очередь. Она проконсультирует вас, соберёт все документы и ответит на все вопросы.</figcaption>
-        </figure>
-        <figure class="katia">
-          <img src="image/Katia.jpg" alt="Дизайнер Катя">
-          <figcaption>Катя тоже занимается дизайном. Она всегда находит общий язык с клиентами и точно знает, как обустроить дом так, чтобы вам понравилось.</figcaption>
-        </figure>
-      </section>
-      <section class="how-we-work" id="work-anchor">
-        <h2>Как мы работаем</h2>
-        <ol>
-          <li>Знакомимся, выезжаем на объект, утверждаем концепцию, подписываем договор.</li>
-          <li>Подбираем мебель, текстиль, аксессуары. Делаем 3D-визуализацию.</li>
-          <li>Находим нужные магазины, помогаем с доставкой и оплатой товаров.</li>
-          <li>Воплощаем проект в жизнь:расставляем мебель и цветы, вешаем шторы, находим места для мелочей</li>
-        </ol>
-      </section>
-    </div>
-    <article class="feedback" id="feedback-anchor">
-      <h2>Отзывы</h2>
-      <section class="feedback__slider">
-        <div class="review">
-          <blockquote>
-            <p>«Восторг! Спасибо, за комфортную жизнь. Очень рада, что выбрала вашу студию для украшения своего дома.</p>
-            <p>Работа шла быстро, было очень приятно общаться и взаимодействовать с сотрудниками. Не ожидала, что это будет так легко!</p>
-            <p>Буду советовать и своим друзьям к вам обращаться!»</p>
-            <cite>АННА БЕЛОВСКАЯ</cite>
-          </blockquote>
+    <main class="page-main">
+      <section class="about-us" id="about-us-anchor">
+        <h2>О нас</h2>
+        <div class="about-us__container">
+          <img src="images/content/table.jpg" class="table" alt="Красиво оформленный стол">
+          <div class="about-us__description">
+            <p>Премиальный европейский текстиль — одно из самых главных направлений работы коллектива. Создавать неповторимые интерьеры для наших дорогих клиентов, уделяя внимание мельчайшим деталям — вот то,  что по-настоящему вдохновляет дизайнеров нашей студии.</p>
+            <p>Наш коллектив сделает все, чтобы после сотрудничества с нами,  Вам было приятно сказать:<q>Да! Это именно то, что действительно достойно моего дома!</q></p>
+          </div>
         </div>
-        <div class="review-image">
-          <img src="image/room_2.jpg" alt="Гостиная">
-          <img src="image/kitchen_2.jpg" alt="Кухня">
-        </div>
-        <nav>
-          <div><a href="" class="prev"></a></div>
-          <div><a href="" class="next"></a></div>
-        </nav>
       </section>
-    </article>
-    <form action="" class="request">
-      <div id="request__info">
-        <h2>Оставить заявку</h2>
-        <p>Оставьте свои контакты. Менеджер перезвонит в удобное вам время и ответит на все вопросы.</p>
-        <div class="input-info">
-          <label for="client-name">Ваше имя</label>
-          <input type="text" name="client-name" required>
-          <label for="client-tel" >Введите телефон</label>
-          <input type="text" name="client-tel" required>
+      <section class="key-features">
+        <h3 class="visually-hidden">Статистика</h3>
+        <div class="key-features__container">
+          <ul>
+            <li>5<br>Лет опыта</li>
+            <li>100<br>проектов</li>
+            <li>10<br>наград</li>
+          </ul>
         </div>
-        <button class="btn-request btn-form" type="submit">Оставить заявку</button>
+      </section>
+      <section class="our-works" id="portfolio-anchor">
+        <div class="our-works__container">
+          <h2>Наши работы</h2>
+          <div class="our-works__images">
+            <figure class="our-works__room">
+              <img src="images/content/room.jpg" alt="Квартира-студия">
+              <figcaption>
+                <h3>Квартира-студия 30 кв.м</h3>
+                <p>В квартире были светлые стены и тёплые цвета. Мы сконцентрировались на отсылках к природе и сделали ребятам уютный интерьер, отсылающий к виллам островов Бали.</p>
+              </figcaption>
+            </figure>
+            <figure><img src="images/content/kitchen.jpg" alt="Кухня"></figure>
+            <figure><img src="images/content/room_2.jpg" alt="Комната"></figure>
+            <figure><img src="images/content/bath.jpg" alt="Ванна"></figure>
+          </div>
+          <div class="our-works__wrapper-link">
+            <a href="#" class="our-work-link">Смотреть еще</a>
+          </div>
+        </div>
+      </section>
+      <div class="wrapper-team-work" id="team-anchor">
+        <section class="team">
+          <h2>Команда</h2>
+          <figure class="team-card masha">
+            <img src="images/content/Masha.jpg" alt="Дизайнер Маша">
+            <figcaption>Это Маша, наш главный дизайнер. Она отвечает за дизайн-проект, приезжает к вам домой, общаетсяи помогает сделать вашу квартиру красивой и уютной.</figcaption>
+          </figure>
+          <figure class="team-card sasha">
+            <img src="images/content/Sasha.jpg" alt="Менеджер Саша">
+            <figcaption>С нашим менеджером Сашей вы познакомитесь в первую очередь. Она проконсультирует вас, соберёт все документы и ответит на все вопросы.</figcaption>
+          </figure>
+          <figure class="team-card katia">
+            <img src="images/content/Katia.jpg" alt="Дизайнер Катя">
+            <figcaption>Катя тоже занимается дизайном. Она всегда находит общий язык с клиентами и точно знает, как обустроить дом так, чтобы вам понравилось.</figcaption>
+          </figure>
+        </section>
+        <section class="how-we-work" id="work-anchor">
+          <h2>Как мы работаем</h2>
+          <ol>
+            <li><p>Знакомимся, выезжаем на объект, утверждаем концепцию, подписываем договор.</p></li>
+            <li><p>Подбираем мебель, текстиль, аксессуары. Делаем 3D-визуализацию.</p></li>
+            <li><p>Находим нужные магазины, помогаем с доставкой и оплатой товаров.</p></li>
+            <li><p>Воплощаем проект в жизнь:расставляем мебель и цветы, вешаем шторы, находим места для мелочей.</p></li>
+          </ol>
+        </section>
       </div>
-      <div class="request__map">
-        <img src="image/map.png" alt="Карта офиса по адресу: город Санкт-петербург, улица Большая Конюшенная, 19">
-      </div>
-    </form>
+      <article class="feedback" id="feedback-anchor">
+        <h2>Отзывы</h2>
+        <section class="feedback__slider">
+          <div class="review">
+            <blockquote>
+              <p>«Восторг! Спасибо, за комфортную жизнь. Очень рада, что выбрала вашу студию для украшения своего дома.</p>
+              <p>Работа шла быстро, было очень приятно общаться и взаимодействовать с сотрудниками. Не ожидала, что это будет так легко!</p>
+              <p>Буду советовать и своим друзьям к вам обращаться!»</p>
+              <cite>АННА БЕЛОВСКАЯ</cite>
+            </blockquote>
+          </div>
+          <div class="review-image">
+            <img src="images/content/room_2.jpg" alt="Фото гостиной из отзыва">
+            <img src="images/content/kitchen_2.jpg" alt="Фото кухни из отзыва">
+          </div>
+          <nav>
+            <div><a href="" class="prev"></a></div>
+            <div><a href="" class="next"></a></div>
+          </nav>
+        </section>
+      </article>
+      <form action="#" method="post" class="request">
+        <div id="request__info">
+          <h2>Оставить заявку</h2>
+          <p>Оставьте свои контакты. Менеджер перезвонит в удобное вам время и ответит на все вопросы.</p>
+          <div class="input-info">
+            <label for="client-name">Ваше имя</label>
+            <input type="text" name="client-name" required>
+            <label for="client-tel" >Введите телефон</label>
+            <input type="text" name="client-tel" required>
+          </div>
+          <button class="btn-request btn-form" type="submit">Оставить заявку</button>
+        </div>
+        <div class="request__map">
+          <img src="images/content/map.png" alt="Карта офиса по адресу: город Санкт-петербург, улица Большая Конюшенная, 19">
+        </div>
+        <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003192!2d30.32085871622023!3d59.93871916905404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1659802884404!5m2!1sru!2sby" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="590" height="624">
+        </iframe> -->
+      </form>
+    </main>
     <footer class="page-footer">
-      <div class="page-footer__container">
-        <ul>
-          <li><a href="tel:+79818574624">+7 (981) 857-46-24</a></li>
-          <li>г. Санкт-петербург, ул. Большая Конюшенная, 19</li>
-          <li>ИП Королёва А.А.</li>
-        </ul>
+      <div class="page-footer__container"> 
+        <address>
+          <a href="tel:+79818574624">+7 (981) 857-46-24</a>
+          <span>г. Санкт-петербург, ул. Большая Конюшенная, 19</span>
+          <span>ИП Королёва А.А.</span>
+        </address>       
       </div>
     </footer>
   </body>
