Второй этап: стилизация(правки)

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     </header>
     <main class="page-main">
       <section class="about-us" id="about-us-anchor">
-        <h2>О нас</h2>
+        <h2 class="about-us__tilte section__title">О нас</h2>
         <div class="about-us__container">
           <img src="images/content/table.jpg" class="table" alt="Красиво оформленный стол">
           <div class="about-us__description">
-            <p>Премиальный европейский текстиль — одно из самых главных направлений работы коллектива. Создавать неповторимые интерьеры для наших дорогих клиентов, уделяя внимание мельчайшим деталям — вот то,  что по-настоящему вдохновляет дизайнеров нашей студии.</p>
-            <p>Наш коллектив сделает все, чтобы после сотрудничества с нами,  Вам было приятно сказать:<q>Да! Это именно то, что действительно достойно моего дома!</q></p>
+            <p class="descripton-text">Премиальный европейский текстиль — одно из самых главных направлений работы коллектива. Создавать неповторимые интерьеры для наших дорогих клиентов, уделяя внимание мельчайшим деталям — вот то,  что по-настоящему вдохновляет дизайнеров нашей студии.</p>
+            <p class="descripton-text">Наш коллектив сделает все, чтобы после сотрудничества с нами,  Вам было приятно сказать:<q>Да! Это именно то, что действительно достойно моего дома!</q></p>
           </div>
         </div>
       </section>
@@ -49,21 +49,21 @@
         <h3 class="visually-hidden">Статистика</h3>
         <div class="key-features__container">
           <ul>
-            <li>5<br>Лет опыта</li>
-            <li>100<br>проектов</li>
-            <li>10<br>наград</li>
+            <li>Лет опыта</li>
+            <li>проектов</li>
+            <li>наград</li>
           </ul>
         </div>
       </section>
       <section class="our-works" id="portfolio-anchor">
         <div class="our-works__container">
-          <h2>Наши работы</h2>
+          <h2 class="portfolio__title section__title">Наши работы</h2>
           <div class="our-works__images">
             <figure class="our-works__room">
               <img src="images/content/room.jpg" alt="Квартира-студия">
               <figcaption>
                 <h3>Квартира-студия 30 кв.м</h3>
-                <p>В квартире были светлые стены и тёплые цвета. Мы сконцентрировались на отсылках к природе и сделали ребятам уютный интерьер, отсылающий к виллам островов Бали.</p>
+                <p class="descripton-text">В квартире были светлые стены и тёплые цвета. Мы сконцентрировались на отсылках к природе и сделали ребятам уютный интерьер, отсылающий к виллам островов Бали.</p>
               </figcaption>
             </figure>
             <figure><img src="images/content/kitchen.jpg" alt="Кухня"></figure>
@@ -77,38 +77,38 @@
       </section>
       <div class="wrapper-team-work" id="team-anchor">
         <section class="team">
-          <h2>Команда</h2>
+          <h2 class="team__title section__title">Команда</h2>
           <figure class="team-card masha">
             <img src="images/content/Masha.jpg" alt="Дизайнер Маша">
-            <figcaption>Это Маша, наш главный дизайнер. Она отвечает за дизайн-проект, приезжает к вам домой, общаетсяи помогает сделать вашу квартиру красивой и уютной.</figcaption>
+            <figcaption class="descripton-text">Это Маша, наш главный дизайнер. Она отвечает за дизайн-проект, приезжает к вам домой, общаетсяи помогает сделать вашу квартиру красивой и уютной.</figcaption>
           </figure>
           <figure class="team-card sasha">
             <img src="images/content/Sasha.jpg" alt="Менеджер Саша">
-            <figcaption>С нашим менеджером Сашей вы познакомитесь в первую очередь. Она проконсультирует вас, соберёт все документы и ответит на все вопросы.</figcaption>
+            <figcaption class="descripton-text">С нашим менеджером Сашей вы познакомитесь в первую очередь. Она проконсультирует вас, соберёт все документы и ответит на все вопросы.</figcaption>
           </figure>
           <figure class="team-card katia">
             <img src="images/content/Katia.jpg" alt="Дизайнер Катя">
-            <figcaption>Катя тоже занимается дизайном. Она всегда находит общий язык с клиентами и точно знает, как обустроить дом так, чтобы вам понравилось.</figcaption>
+            <figcaption class="descripton-text">Катя тоже занимается дизайном. Она всегда находит общий язык с клиентами и точно знает, как обустроить дом так, чтобы вам понравилось.</figcaption>
           </figure>
         </section>
         <section class="how-we-work" id="work-anchor">
-          <h2>Как мы работаем</h2>
+          <h2 class="steps__title section__title">Как мы работаем</h2>
           <ol>
-            <li><p>Знакомимся, выезжаем на объект, утверждаем концепцию, подписываем договор.</p></li>
-            <li><p>Подбираем мебель, текстиль, аксессуары. Делаем 3D-визуализацию.</p></li>
-            <li><p>Находим нужные магазины, помогаем с доставкой и оплатой товаров.</p></li>
-            <li><p>Воплощаем проект в жизнь:расставляем мебель и цветы, вешаем шторы, находим места для мелочей.</p></li>
+            <li><p class="descripton-text">Знакомимся, выезжаем на объект, утверждаем концепцию, подписываем договор.</p></li>
+            <li><p class="descripton-text">Подбираем мебель, текстиль, аксессуары. Делаем 3D-визуализацию.</p></li>
+            <li><p class="descripton-text">Находим нужные магазины, помогаем с доставкой и оплатой товаров.</p></li>
+            <li><p class="descripton-text">Воплощаем проект в жизнь:расставляем мебель и цветы, вешаем шторы, находим места для мелочей.</p></li>
           </ol>
         </section>
       </div>
       <article class="feedback" id="feedback-anchor">
-        <h2>Отзывы</h2>
+        <h2 class="review__title section__title">Отзывы</h2>
         <section class="feedback__slider">
           <div class="review">
             <blockquote>
-              <p>«Восторг! Спасибо, за комфортную жизнь. Очень рада, что выбрала вашу студию для украшения своего дома.</p>
-              <p>Работа шла быстро, было очень приятно общаться и взаимодействовать с сотрудниками. Не ожидала, что это будет так легко!</p>
-              <p>Буду советовать и своим друзьям к вам обращаться!»</p>
+              <p class="descripton-text">«Восторг! Спасибо, за комфортную жизнь. Очень рада, что выбрала вашу студию для украшения своего дома.</p>
+              <p class="descripton-text">Работа шла быстро, было очень приятно общаться и взаимодействовать с сотрудниками. Не ожидала, что это будет так легко!</p>
+              <p class="descripton-text">Буду советовать и своим друзьям к вам обращаться!»</p>
               <cite>АННА БЕЛОВСКАЯ</cite>
             </blockquote>
           </div>
@@ -124,13 +124,13 @@
       </article>
       <form action="#" method="post" class="request">
         <div id="request__info">
-          <h2>Оставить заявку</h2>
-          <p>Оставьте свои контакты. Менеджер перезвонит в удобное вам время и ответит на все вопросы.</p>
+          <h2 class="contacts__title section__title">Оставить заявку</h2>
+          <p class="descripton-text">Оставьте свои контакты. Менеджер перезвонит в удобное вам время и ответит на все вопросы.</p>
           <div class="input-info">
             <label for="client-name">Ваше имя</label>
-            <input type="text" name="client-name" required>
+            <input type="text" name="client-name" placeholder="Ваше имя" required>
             <label for="client-tel" >Введите телефон</label>
-            <input type="text" name="client-tel" required>
+            <input type="text" name="client-tel" placeholder="Введите телефон" required>
           </div>
           <button class="btn-request btn-form" type="submit">Оставить заявку</button>
         </div>
@@ -140,11 +140,12 @@
         <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003192!2d30.32085871622023!3d59.93871916905404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1659802884404!5m2!1sru!2sby" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="590" height="624">
         </iframe> -->
       </form>
+      
     </main>
     <footer class="page-footer">
       <div class="page-footer__container"> 
         <address>
-          <a href="tel:+79818574624">+7 (981) 857-46-24</a>
+          <a class="telephone" href="tel:+79818574624">+7 (981) 857-46-24</a>
           <span>г. Санкт-петербург, ул. Большая Конюшенная, 19</span>
           <span>ИП Королёва А.А.</span>
         </address>       
